Blender closing when f12 for render is pressed #49136

Closed
opened 2016-08-22 08:36:26 +02:00 by slawek · 7 comments

System Information
Windows 7, GTX 760

Blender Version
Broken: First 2.78 build, 2.77 Date: 2016-08-11 10:36 ; Hash: 1fe9d67
Worked: 2.77a official release

When pressing f12 to render Blender simply closes

just load this blend and press f12
You can download .blend file here:
http://www.mediafire.com/download/g35a7ew84eclll7/push_F12_crash.blend

**System Information** Windows 7, GTX 760 **Blender Version** Broken: First 2.78 build, 2.77 Date: 2016-08-11 10:36 ; Hash: 1fe9d67 Worked: 2.77a official release **When pressing f12 to render Blender simply closes** **just load this blend and press f12** You can download .blend file here: http://www.mediafire.com/download/g35a7ew84eclll7/push_F12_crash.blend
slawek self-assigned this 2016-08-22 08:36:26 +02:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nezumi

Added subscriber: @nezumi

Added subscribers: @mont29, @Sergey, @brecht

Added subscribers: @mont29, @Sergey, @brecht
slawek was unassigned by Bastien Montagne 2016-08-22 09:01:14 +02:00

Here file breaks on assert re constant folding…

blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/constant_fold.cpp:94: void ccl::ConstantFolder::bypass(ccl::ShaderOutput*) const: Assertion `new_output' failed.
Here file breaks on assert re constant folding… ``` blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/constant_fold.cpp:94: void ccl::ConstantFolder::bypass(ccl::ShaderOutput*) const: Assertion `new_output' failed.
Alexander Gavrilov self-assigned this 2016-08-22 10:02:03 +02:00

This issue was referenced by blender/cycles@aba13444d5

This issue was referenced by blender/cycles@aba13444d55615ddaeda8cc70412ab6ac641a529

This issue was referenced by eb2ee7212e

This issue was referenced by eb2ee7212e16547e2a79b967d2ed37d88b0f2565

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49136
No description provided.