intern/cycles/render/nodes.cpp
@@ -4846,12 +4846,8 @@ void CurvesNode::constant_fold(const ConstantFolder& folder, ShaderInput *value_
 {
 	ShaderInput *fac_in = input("Fac");
 
-	/* remove no-op node */
-	if(!fac_in->link && fac == 0.0f) {
-		folder.bypass(value_in->link);
-	}
 	/* evaluate fully constant node */
-	else if(folder.all_inputs_constant()) {
+	if(folder.all_inputs_constant()) {
 		if (curves.size() == 0)
 			return;
 
@@ -4863,6 +4859,11 @@ void CurvesNode::constant_fold(const ConstantFolder& folder, ShaderInput *value_
 		result[2] = rgb_ramp_lookup(curves.data(), pos[2], true, true, curves.size()).z;
 
 		folder.make_constant(interp(value, result, fac));
+	}
+	/* remove no-op node */
+	else if(!fac_in->link && fac == 0.0f) {
+		/* link is not null because otherwise all inputs are constant */
+		folder.bypass(value_in->link);
 	}
 }
 
